@@ -2,8 +2,8 @@ package muse_kopis.muse.performance;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.dataformat.xml.XmlMapper;
-import java.time.LocalDate;
-import java.time.format.DateTimeFormatter;
+import jakarta.transaction.Transactional;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
@@ -11,6 +11,8 @@ import java.util.stream.Collectors;
 import lombok.extern.slf4j.Slf4j;
 import muse_kopis.muse.common.FetchFailException;
 import muse_kopis.muse.common.NotFoundPerformanceException;
+import muse_kopis.muse.performance.castmember.CastMember;
+import muse_kopis.muse.performance.castmember.CastMemberRepository;
 import muse_kopis.muse.performance.dto.Boxofs;
 import muse_kopis.muse.performance.dto.Boxofs.Boxof;
 import muse_kopis.muse.performance.dto.KOPISPerformanceDetailResponse.Detail;
@@ -18,7 +20,7 @@ import muse_kopis.muse.performance.dto.KOPISPerformanceResponse;
 import muse_kopis.muse.performance.dto.KOPISPerformanceResponse.DB;
 import muse_kopis.muse.performance.dto.KOPISPerformanceDetailResponse;
 import muse_kopis.muse.performance.dto.PerformanceResponse;
-import muse_kopis.muse.performance.dto.PopularPerformanceResponse;
+import org.apache.commons.text.similarity.LevenshteinDistance;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestTemplate;
@@ -32,13 +34,23 @@ public class PerformanceService {
     private final String API_URL = "http://www.kopis.or.kr/openApi/restful/pblprfr";
     private final String API_URL_BOX_OFFICE = "http://kopis.or.kr/openApi/restful/boxoffice";
     private final PerformanceRepository performanceRepository;
+    private final CastMemberRepository castMemberRepository;
     private final RestTemplate restTemplate;
     private final XmlMapper xmlMapper;
+    private final static String CURRENT = "공연중";
+    private final static String UPCOMING = "공연예정";
+    private final static String BLANK_OR_COMMA = "[,\\s]+";
+    public static final String BLANK_OR_PARENTHESIS = "[\\s()]";
 
-    public PerformanceService(PerformanceRepository performanceRepository) {
+    public PerformanceService(PerformanceRepository performanceRepository, CastMemberRepository castMemberRepository) {
         this.performanceRepository = performanceRepository;
+        this.castMemberRepository = castMemberRepository;
         this.restTemplate = new RestTemplate();
         this.xmlMapper = new XmlMapper();
+    }
+
+    public PerformanceResponse findById(Long performanceId) {
+        return PerformanceResponse.from(performanceRepository.getByPerformanceId(performanceId));
     }
 
     public List<PerformanceResponse> findAllPerformance(String state){
@@ -55,6 +67,7 @@ public class PerformanceService {
                 .collect(Collectors.toList());
     }
 
+    @Transactional
     public void fetchPerformances(String startDate, String endDate, String currentPage, String rows, String state, String genre)
             throws JsonProcessingException {
         String url = API_URL + "?service=" + kopisKey + "&stdate=" + startDate + "&eddate=" + endDate +
@@ -70,7 +83,28 @@ public class PerformanceService {
         }
     }
 
-    public List<PopularPerformanceResponse> fetchPopularPerformance(String type, String date, String genre) {
+    private void saveAllPerformance(KOPISPerformanceResponse KOPISPerformanceResponse) throws JsonProcessingException {
+        List<DB> list = Optional.ofNullable(KOPISPerformanceResponse.db()).orElse(Collections.emptyList());
+        for (DB db : list) {
+            String performanceId = db.mt20id();
+            KOPISPerformanceDetailResponse performanceResponse = fetchPerformanceDetail(performanceId);
+            if(performanceResponse.detail().isEmpty()) {
+                return;
+            }
+            Detail performanceDetail = performanceResponse.detail().getFirst();
+            Performance performance = Performance.from(performanceDetail);
+            performanceRepository.save(performance);
+            List<CastMember> castMembers = Arrays.stream(performanceDetail.crews().split(BLANK_OR_COMMA))
+                    .map(String::trim)
+                    .map(name -> name.endsWith("등") ? name.substring(0, name.length() - 1).trim() : name)
+                    .filter(name -> !name.isEmpty())  // 빈 문자열 필터링
+                    .map(name -> new CastMember(name,performance))
+                    .toList();
+            castMemberRepository.saveAll(castMembers);
+        }
+    }
+
+    public List<PerformanceResponse> fetchPopularPerformance(String type, String date, String genre) {
         String url = API_URL_BOX_OFFICE + "?service=" + kopisKey + "&ststype=" + type + "&date=" + date + "&catecode=" + genre;
         String response = restTemplate.getForObject(url, String.class);
         try {
@@ -79,24 +113,17 @@ public class PerformanceService {
                     .stream()
                     .limit(10)
                     .toList();
-            log.info(boxofList.getFirst().mt20id());
-            return boxofList.stream()
-                    .map(PopularPerformanceResponse::from).collect(Collectors.toList());
+            LevenshteinDistance levenshtein = new LevenshteinDistance();
+            List<Performance> collect = boxofList.stream().map(it -> performanceRepository.findAllByStateOrState(CURRENT, UPCOMING).stream()
+                            .filter(p -> p.getPerformanceName().equals(it.prfnm())
+                                    && levenshtein.apply(p.getVenue().replaceAll(BLANK_OR_PARENTHESIS, ""), it.prfplcnm().replaceAll(BLANK_OR_PARENTHESIS, "")) <= 5)
+                            .findFirst())
+                    .filter(Optional::isPresent)
+                    .map(Optional::get)
+                    .toList();
+            return collect.stream().map(PerformanceResponse::from).collect(Collectors.toList());
         } catch (Exception e) {
             throw new NotFoundPerformanceException("공연을 찾을 수 없습니다.");
-        }
-    }
-
-    private void saveAllPerformance(KOPISPerformanceResponse KOPISPerformanceResponse) throws JsonProcessingException {
-        List<DB> list = Optional.ofNullable(KOPISPerformanceResponse.db()).orElse(Collections.emptyList());
-        for (DB db : list) {
-            String performanceId = db.mt20id();
-            KOPISPerformanceDetailResponse performance = fetchPerformanceDetail(performanceId);
-            if(performance.detail().isEmpty()) {
-                return;
-            }
-            Detail performanceDetail = performance.detail().getFirst();
-            performanceRepository.save(Performance.from(performanceDetail));
         }
     }
 
